force-app/main/default/objects/AuditSelectionData__c/AuditSelectionData__c.object-meta.xml
<CustomObject>
    <label>AuditSelectionData</label>
    <nameField>
        <label>AuditSelectionData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditSelectionData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>