force-app/main/default/objects/AuditSelectionData__c/fields/Date_Selection_value__c.field-meta.xml
<CustomField>
    <fullName>Date_Selection_value__c</fullName>
    <label>Date Selection value</label>
    <type>Date</type>
</CustomField>