force-app/main/default/objects/AuditSelectionData__c/fields/DateSelectionName__c.field-meta.xml
<CustomField>
    <fullName>DateSelectionName__c</fullName>
    <label>DateSelection</label>
    <length>80</length>
    <type>Text</type>
</CustomField>