force-app/main/default/objects/AuditSelectionData__c/fields/Selection_value__c.field-meta.xml
<CustomField>
    <fullName>Selection_value__c</fullName>
    <label>Selection value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>